test/functions/ferguson/generic-default-nil.good
generic-default-nil.chpl:3: error: Default expression not convertible to formal type
generic-default-nil.chpl:3: In function 'foo':
generic-default-nil.chpl:4: error: the type of the actual argument 'x' is generic
note: generic actual arguments are not currently supported
generic-default-nil.chpl:7: Function 'foo' instantiated here
